2006-08-22  Paolo Borelli  <pborelli@katamail.com>

	* plugins/snippets/SnippetsDialog.py: link help to the proper
	section.

2006-08-20  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/__init__.py: add forgotten strings to be
	translated.

2006-08-20  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-bookmarks-store.c:

	do not leak the list of volumes.

2006-08-18  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c: do not leak the doc list.

2006-08-18  Steve Frécinaux  <steve@istique.net>

	* plugins/externaltools/tools/__init__.py:
	* plugins/externaltools/tools/functions.py:
	* plugins/externaltools/tools/manager.py:
	* plugins/pythonconsole/pythonconsole/__init__.py:
	
	Fix translation of python plugins.

2006-08-17  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-preferences-dialog.c: do not crash if no
	lang files are found.

2006-08-17  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-io-error-message-area.c: small memory leaks on error.

2006-08-16  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c:
	* gedit/gedit-app.[ch]:

	properly use window::dispose to drop the references to the ui
	manager and to disconnect the recents_changed callback. It should
	fix warning and crashes. Also turn the lockdown changed handler
	in a simple method so that we avoid headaches tracking the lifetime
	of the window itself.

2006-08-16  Steve Frécinaux  <steve@istique.net>

	* plugins/modelines/modelines.py: fix warning on activation.

2006-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit-window.c (gedit_window_finalize): remove the
	recent_manager_changed callback.

2006-08-15  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-store.c: changed 
	g_value_set_string to g_value_take_string to save a string dup

2006-08-15  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-bookmarks-store.[ch]: fixed