@@ -1,3 +1,8 @@
+2006-08-21  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-encodings.c: added support for UTF-16LE, UTF-16BE 
+	and UTF-32
+
 2006-08-22  Paolo Borelli  <pborelli@katamail.com>
 
 	* plugins/snippets/SnippetsDialog.py: link help to the proper
